--- a/parent/framework/pom.xml
+++ b/parent/framework/pom.xml
@@ -39,7 +39,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>demoiselle-framework-parent</artifactId>
-	<version>2.4.2-SNAPSHOT</version>
+	<version>2.4.10</version>
 	<packaging>pom</packaging>
 
 	<parent>
@@ -110,6 +110,18 @@
 			<releases>
 				<enabled>true</enabled>
 			</releases>
+		<!-- Repositorio interno DSI UFPR -->
+		<repository>
+			<id>nexus</id>
+			<name>Nexus</name>
+			<url>http://homologa3.cce.ufpr.br:8080/nexus/content/groups/public</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+		</repository>
 		</repository>
 	</repositories>
 
