--- a/parent/bom/pom.xml
+++ b/parent/bom/pom.xml
@@ -44,7 +44,7 @@
 	<parent>
 		<groupId>br.gov.frameworkdemoiselle</groupId>
 		<artifactId>demoiselle-framework-parent</artifactId>
-		<version>2.4.2-SNAPSHOT</version>
+		<version>2.4.10</version>
 		<relativePath>../framework</relativePath>
 	</parent>
 
@@ -72,42 +72,42 @@
 			<dependency>
 				<groupId>br.gov.frameworkdemoiselle</groupId>
 				<artifactId>demoiselle-core</artifactId>
-				<version>2.4.2-SNAPSHOT</version>
+				<version>2.4.10</version>
 			</dependency>
 			<dependency>
 				<groupId>br.gov.frameworkdemoiselle</groupId>
 				<artifactId>demoiselle-jta</artifactId>
-				<version>2.4.2-SNAPSHOT</version>
+				<version>2.4.10</version>
 			</dependency>
 			<dependency>
 				<groupId>br.gov.frameworkdemoiselle</groupId>
 				<artifactId>demoiselle-jdbc</artifactId>
-				<version>2.4.2-SNAPSHOT</version>
+				<version>2.4.10</version>
 			</dependency>
 			<dependency>
 				<groupId>br.gov.frameworkdemoiselle</groupId>
 				<artifactId>demoiselle-jpa</artifactId>
-				<version>2.4.2-SNAPSHOT</version>
+				<version>2.4.10</version>
 			</dependency>
 			<dependency>
 				<groupId>br.gov.frameworkdemoiselle</groupId>
 				<artifactId>demoiselle-servlet</artifactId>
-				<version>2.4.2-SNAPSHOT</version>
+				<version>2.4.10</version>
 			</dependency>
 			<dependency>
 				<groupId>br.gov.frameworkdemoiselle</groupId>
 				<artifactId>demoiselle-jsf</artifactId>
-				<version>2.4.2-SNAPSHOT</version>
+				<version>2.4.10</version>
 			</dependency>
 			<dependency>
 				<groupId>br.gov.frameworkdemoiselle</groupId>
 				<artifactId>demoiselle-se</artifactId>
-				<version>2.4.2-SNAPSHOT</version>
+				<version>2.4.10</version>
 			</dependency>
 			<dependency>
 				<groupId>br.gov.frameworkdemoiselle</groupId>
 				<artifactId>demoiselle-jmx</artifactId>
-				<version>2.4.2-SNAPSHOT</version>
+				<version>2.4.10</version>
 			</dependency>
 			<!--
 			<dependency>
@@ -399,14 +399,26 @@
 				<enabled>true</enabled>
 			</releases>
 		</repository>
+		<!-- Repositorio interno DSI UFPR -->
+		<repository>
+			<id>nexus</id>
+			<name>Nexus</name>
+			<url>http://homologa3.cce.ufpr.br:8080/nexus/content/groups/public</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+		</repository>
 	</repositories>
 
 	<properties>
-		<javaee.version>6.0</javaee.version>
+		<javaee.version>7.0</javaee.version>
 		<cdi.version>1.0-SP4</cdi.version>
 		<validation.version>1.0.0.GA</validation.version>
 		<transaction.version>1.1</transaction.version>
-		<jsf.version>2.1.11</jsf.version>
+		<jsf.version>2.2.13</jsf.version>
 		<el.version>2.2</el.version>
 		<servlet.version>2.5</servlet.version>
 		<persistence.version>2.0.0</persistence.version>
@@ -428,7 +440,7 @@
 		<maven.surefire.plugin.version>2.16</maven.surefire.plugin.version>
 
 		<powermock.version>1.4.6</powermock.version>
-		<primefaces.version>3.5</primefaces.version>
+		<primefaces.version>5.3</primefaces.version>
 		<slf4j.version>1.6.1</slf4j.version>
 		<weld.version>1.1.8.Final</weld.version>
 		<commons.configuration.version>1.9</commons.configuration.version>
