--- a/parent/extension/pom.xml
+++ b/parent/extension/pom.xml
@@ -44,7 +44,7 @@
 	<parent>
 		<groupId>br.gov.frameworkdemoiselle</groupId>
 		<artifactId>demoiselle-framework-parent</artifactId>
-		<version>2.4.2-SNAPSHOT</version>
+		<version>2.4.10</version>
 		<relativePath>../framework</relativePath>
 	</parent>
 
@@ -71,7 +71,7 @@
 			<dependency>
 				<groupId>br.gov.frameworkdemoiselle</groupId>
 				<artifactId>demoiselle-framework-bom</artifactId>
-				<version>2.4.2-SNAPSHOT</version>
+				<version>2.4.10</version>
 				<scope>import</scope>
 				<type>pom</type>
 			</dependency>
@@ -169,6 +169,30 @@
 			<url>https://oss.sonatype.org/content/repositories/releases</url>
 			<snapshots>
 				<enabled>false</enabled>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+		</repository>
+		<!-- Repositorio interno DSI UFPR -->
+		<repository>
+			<id>nexus</id>
+			<name>Nexus</name>
+			<url>http://homologa3.cce.ufpr.br:8080/nexus/content/groups/public</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+		</repository>	
+		<!-- Repositorio interno DSI UFPR -->
+		<repository>
+			<id>nexus</id>
+			<name>Nexus</name>
+			<url>http://homologa3.cce.ufpr.br:8080/nexus/content/groups/public</url>
+			<snapshots>
+				<enabled>true</enabled>
 			</snapshots>
 			<releases>
 				<enabled>true</enabled>
